# gestao_estoque

./: .dockerignore  .gitignore  Dockerfile  db.sqlite3-old  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
accounts/: urls.py  views.py
accounts/migrations/: 0001_initial.py
configs/gunicorn/: conf.py
gestao_estoque/: jazzmin.py  settings.py  urls.py
inventory_management/: admin.py  apps.py  context_processors.py  forms.py  middleware.py  models.py  signals.py  urls.py  views.py
inventory_management/migrations/: 0013_hall_shelf_alter_productunit_options_and_more.py  0014_remove_room_shelf_hall_shelf.py  0015_alter_hall_shelf.py  0018_color_pattern_alter_building_options_and_more.py  0019_alter_productunit_options_and_more.py  0020_color_pattern_alter_building_options_and_more.py  0021_product_color_product_pattern.py  0071_alter_building_complement.py  0072_alter_shelf_hall_alter_shelf_room.py  0073_alter_shelf_options_alter_productunit_shelf_and_more.py  0074_alter_productunit_weight_length.py  0075_alter_color_options_alter_pattern_options.py  0076_storagetype_is_store.py  0077_productunit_provider.py  0078_alter_building_options.py  0079_alter_building_cep_alter_building_city_and_more.py  0080_alter_write_off_options.py  0081_alter_product_options.py  0082_remove_product_code.py  0083_productunit_metro.py  0084_remove_productunit_metro.py  0085_product_code1_product_code2.py  0085_remove_productunit_code_product_code1_product_code2.py  0086_productunit_code.py  (+8 more)
templates/: 403.html  404.html  500.html  base.html
(+30 files in other folders)
